k3s/cast-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-db
  template:
    metadata:
      labels:
        app: cast-db
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
