k3s/movie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-deployment
  labels:
    app: movie-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - name: movie-service
          image: art2025/jenkins-exam:movie
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
