k3s/cast-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-db
spec:
  selector:
    app: cast-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
