k3s/cast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-service
spec:
  selector:
    app: cast-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
