k3s/movie-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-db
spec:
  selector:
    app: movie-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
