k3s/movie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  selector:
    app: movie-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
